# hands-on-system-design

./: .gitignore  README.md
consistent-hashing/: app.py
design-rate-limiter/: Cargo.toml
design-rate-limiter/src/: main.rs  middleware.rs  rate_limiter.rs  rate_limiting_algo.rs
document_service/: main.py
handle-large-blob/: Cargo.toml  prompts.txt
handle-large-blob/examples/: resumable_client.rs
handle-large-blob/src/: main.rs
handle-large-blob/src/routes/: mod.rs  resumable_upload.rs  simple_upload.rs
handle-large-blob/src/services/: mod.rs  presign.rs  user.rs
hotswap/: main.py  model1.py
multi-chunk-upload/: main.py
optimisitic-concurrency-control/: main.py
order_service/: simple.py  two_datasets_with_lock.py
payment_service/: main.py
redis-pub-sub/: Cargo.toml
redis-pub-sub/src/: main.rs
server-sent-event/: app.py  main.html
service-discovery/: client.py  example_service.py  registry.py
websockets-chat-service/: chat_server.py  redis_client.py
