[package]
name = "handle_large_blob"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
# Add your cloud SDK here, e.g., aws-sdk-s3, azure_sdk_storage_blob, or google-cloud-storage
